--- a/Fundraising/wwwroot/Proposal/test4.html
+++ b/Fundraising/wwwroot/Proposal/test4.html
@@ -5,46 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Document</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
 <body>
-    <label for="UserEmail">帳號</label>
-    <input type="text" name="UserEmail" id="UserEmail">
-    <br>
-    <label for="UserPassword">密碼</label>
-    <input type="text" name="UserPassword" id="UserPassword">
-
-    <button onclick="login()">登入</button>
-    <button onclick="logout()">登出</button>
-
+    <div id="g_id_onload" data-client_id="762792073286-id6ruvd00ar6toi9341t7rl2scejpmim.apps.googleusercontent.com" data-callback="handleCallback" data-auto_prompt="false">
+    </div>
+    <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
+        data-shape="square" data-logo_alignment="left"></div>
     <script>
-        function login() {
+        function parseJwt(token) {
+            var base64Url = token.split('.')[1];
+            var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+            var jsonPayload = decodeURIComponent(atob(base64).split('').map(function (c) {
+                return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+            }).join(''));
 
-            axios.post("https://localhost:44398/api/Login", {
-                UserEmail: document.getElementById("UserEmail").value,
-                UserPassword: document.getElementById("UserPassword").value
-            })
-                .then(res => {
-                    console.log(res.data);
-                    if (res.data != "帳號密碼錯誤") {
-                        window.location ="https://localhost:44398/Proposal/myproposal.html";
-                    }
-                })
-                .catch(error => {
-                    console.log(error.response);
-                });
-        }
-
-        function logout() {
-            axios.delete("https://localhost:44398/api/Login")
-                .then(res => {
-                    console.log(res);
-                })
-                .catch(error => {
-                    console.log(error.response);
-                });
+            return JSON.parse(jsonPayload);
+        };
+        function handleCallback(response) {
+            const data = parseJwt(response.credential);
+            console.log(data);
         }
     </script>
 </body>
