員工資料處理待續

--- a/Fundraising/wwwroot/CMS/PdetailsEdit.html
+++ b/Fundraising/wwwroot/CMS/PdetailsEdit.html
@@ -362,10 +362,10 @@
                                 putproduct.featured = this.productinfo.featured
                             }
                             console.log(putproduct)
-                            axios.put(`/api/back/Products/${this.productinfo.productId}`, putproduct)
-                                .then(response => console.log(response));
-                            alert("提案審核已確認");
-                            window.location = "./Plist.html"
+                            // axios.put(`/api/back/Products/${this.productinfo.productId}`, putproduct)
+                            //     .then(response => console.log(response));
+                            // alert("提案審核已確認");
+                            // window.location = "./Plist.html"
                         })
                 }
             },
