--- a/Fundraising/wwwroot/MemberCentre/UserOrderDetail.html
+++ b/Fundraising/wwwroot/MemberCentre/UserOrderDetail.html
@@ -17,7 +17,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3/dist/vue-loading.css"
+      rel="stylesheet"
+    />
     <style>
       .card {
         box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
@@ -31,7 +36,8 @@
     <title>訂單修改</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="app">
+      <loading :can-cancel="true"></loading>
       <div class="mx-auto" style="width: 80%">
         <h5 class="ms-4 mt-3">
           <a href="./UserOrder.html" class="text-dark text-decoration-none h5"
@@ -40,7 +46,7 @@
           / <span class="text-decoration-underline">修改寄送資訊</span>
         </h5>
       </div>
-      <div class="card mt-3 mx-auto" id="app">
+      <div class="card mt-3 mx-auto">
         <div class="row">
           <!-- 照片 -->
           <div class="col-md-3">
