--- a/Fundraising/wwwroot/MemberCentre/ProjectManage.html
+++ b/Fundraising/wwwroot/MemberCentre/ProjectManage.html
@@ -11,13 +11,18 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./stepper.css" />
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"
       integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3/dist/vue-loading.css"
+      rel="stylesheet"
+    />
     <style>
       .card {
         box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
@@ -37,6 +42,7 @@
   </head>
   <body>
     <div class="container" id="app">
+      <loading :can-cancel="true"></loading>
       <!-- 當前分頁 -->
       <div class="mx-auto ps-4 pt-3" style="width: 100%">
         <h5>
