--- a/Fundraising/wwwroot/MemberCentre/UserFollowing.html
+++ b/Fundraising/wwwroot/MemberCentre/UserFollowing.html
@@ -11,13 +11,18 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./stepper.css" />
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"
       integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3/dist/vue-loading.css"
+      rel="stylesheet"
+    />
     <style>
       .card {
         box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
@@ -52,12 +57,13 @@
     <title>追蹤專案</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="app">
+      <loading :can-cancel="true"></loading>
       <!-- 標題˙ -->
       <div class="mx-auto ps-4 pt-3" style="width: 80%">
         <h5>追蹤專案</h5>
       </div>
-      <div class="card mx-auto mt-3" id="app">
+      <div class="card mx-auto mt-3">
         <loading :active.sync="isLoading"></loading>
         <div class="row m-3" v-if="myfollow.length>0">
           <div class="following col-4 my-3" v-for="item in myfollow">
